<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tetap"
            android:icon="@drawable/kebutuhan_ttp"
            android:title="@string/kebutuhan_tetap" />
        <item
            android:id="@+id/nav_tdk_tetap"
            android:icon="@drawable/keb_tdk_ttp"
            android:title="@string/kebutuhan_tidak_tetap" />
        <item
            android:id="@+id/nav_laporan"
            android:icon="@drawable/laporan"
            android:title="@string/laporan" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>


</menu>