<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context="com.lulua.tesyant.householdmanager.activities.AddFixedNeedsActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_fixed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_barang"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_jatuhTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_below="@+id/edt_fixed_name"
        android:text="@string/jatuh_tempo"
        android:textSize="@dimen/label_textSize"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/set_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_toEndOf="@id/tv_jatuhTempo"
        android:layout_below="@id/edt_fixed_name"
        android:layout_alignParentEnd="true"
        android:onClick="setDate"
        android:text="@string/setTanggal" />

    <TextView
        android:id="@+id/tv_dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_below="@id/tv_jatuhTempo"
        android:paddingTop="@dimen/activity_margin"
        android:text="@string/tanggal"
        android:textColor="@android:color/black"
        android:textSize="@dimen/label_textSize" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dateTitle"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/date_selected"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout

        android:id="@+id/edt_fixed_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_date"
        android:layout_margin="@dimen/activity_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tenggang_waktu"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/tmb_add_fixed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_fixed_date"
        android:text="@string/tambah" />

</RelativeLayout>
